project2/test/test_11712639_09.out
Error type 15 at line 5: redefine structure type st
Error type 3 at line 7: c variable is redefined in the same scope
