project2/test/test_11712639_09.spl
struct st{
    int a, b[2];
};

struct st{
    int c;
    char c;
};